Fixed back card being out of bounds

--- a/Gigue/src/styles/searchpage.css
+++ b/Gigue/src/styles/searchpage.css
@@ -16,6 +16,7 @@ label {
     margin-right: 0;
     margin-left: 0;
     border-width: .2rem;
+
 }
 .card-flip > div {
     backface-visibility: hidden;
@@ -23,10 +24,10 @@ label {
     transition-timing-function: linear;
     width: 100%;
     height: 100%;
-    margin: 0;
-  
+    margin: 0; 
 }
   
+
   .front {
     transform: rotateY(0deg);
   }
@@ -35,6 +36,7 @@ label {
     transform: rotateY(180deg);
     position: absolute;
     top: 0;
+
   }
  
   .card-flip:hover .front {
@@ -43,6 +45,7 @@ label {
     
   .card-flip:hover .back {
     transform: rotateY(0deg);
+    position: initial;
   }
 
   .error-msg {
